--- a/looplist/RootView/LLRootFooterView.xib
+++ b/looplist/RootView/LLRootFooterView.xib
@@ -24,7 +24,7 @@
                     <rect key="frame" x="20" y="31" width="280" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                    <state key="normal" title="complete">
+                    <state key="normal" title="Complete">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
