--- a/looplist/Base.lproj/Main_iPhone.storyboard
+++ b/looplist/Base.lproj/Main_iPhone.storyboard
@@ -41,7 +41,6 @@
                                                     <rect key="frame" x="15" y="11" width="58" height="21"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.015686275440000001" green="0.68235296010000002" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="a4u-m4-w8e">
@@ -187,7 +186,6 @@
                                                     <rect key="frame" x="15" y="12" width="53" height="21"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.015686275440000001" green="0.68235296010000002" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XoM-Ug-G98">
@@ -215,7 +213,6 @@
                                                     <rect key="frame" x="15" y="12" width="64" height="21"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.015686275440000001" green="0.68235296010000002" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UMk-Is-yi5">
@@ -239,8 +236,8 @@
                     <navigationItem key="navigationItem" title="Evernote account" id="3wC-nL-ufS"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="SignInCell" destination="zGF-ym-AEg" id="ex2-w4-Xy7"/>
-                        <outlet property="SignOut" destination="hlQ-Lc-Gdo" id="aNy-1U-eM8"/>
+                        <outlet property="signInCell" destination="zGF-ym-AEg" id="fOg-M6-Zd6"/>
+                        <outlet property="signOutCell" destination="hlQ-Lc-Gdo" id="rFs-6c-Sur"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HdB-fk-d37" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -258,7 +255,7 @@
                         <color key="tintColor" red="0.015686275440000001" green="0.68235296010000002" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="ZZL-OS-cUt">
-                                <rect key="frame" x="0.0" y="119" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="55" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZZL-OS-cUt" id="skM-xd-Iyd">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -289,7 +286,7 @@
                             <tableViewSection id="O9F-48-Bjc">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="RUM-Jv-5Nk" style="IBUITableViewCellStyleDefault" id="WLo-9I-XkG">
-                                        <rect key="frame" x="0.0" y="99" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="35" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WLo-9I-XkG" id="kFR-hF-fZ7">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -310,7 +307,7 @@
                             <tableViewSection id="LbP-hr-dxX">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="RjS-kN-VpQ" style="IBUITableViewCellStyleDefault" id="qgs-hN-GfF">
-                                        <rect key="frame" x="0.0" y="163" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="99" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qgs-hN-GfF" id="VGY-pl-31g">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
